fix scrollbars for real this time?

--- a/frontend/src/components/Diff/Diff.module.css
+++ b/frontend/src/components/Diff/Diff.module.css
@@ -1,6 +1,10 @@
 .container {
     padding: 8px;
     overflow: auto;
+    width: 100%;
+
+    scrollbar-color: #fff3 transparent;
+    scrollbar-width: thin;
 }
 
 .diff {
